# hermes-router-tray

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
scripts/: install-hooks.sh  make-status-icons.py  make-text-icon.py
share/applications/: hermes-router.desktop.in
share/autostart/: hermes-router-autostart.desktop.in
share/systemd/: hermes-router-indicator.service.in
src/hermes_router_tray/: __init__.py  __main__.py  config.py  probe.py
tests/: test_config.py  test_probe.py
