[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "hermes-router-tray"
version = "0.1.0"
description = "Tray indicator for the Hermes-router load-balancer, auto-starting with the Hermes gateway."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "topbronson"}]
keywords = ["hermes", "tray", "appindicator", "router", "load-balancer", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "hermes-tray-lib @ git+https://github.com/topbronson/hermes-tray-lib@v0.1.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.8",
]

[project.scripts]
hermes-router-indicator = "hermes_router_tray.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_router_tray"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "scripts",
    "share",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "RET", "SIM", "TCH", "RUF"]
ignore = ["E501", "UP037"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "S105",
    "S106",
    "PT018",
    "RUF059",
    "TC003",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "gi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gi.repository.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
